<resources>
    <string name="app_name">my-music-library-app</string>
    <string name="option_playlists">Playlists</string>
    <string name="option_artists">Artists</string>
    <string name="option_discover">Discover</string>
    <string name="option_songs">Songs</string>
    <string name="option_upgrade">Upgrade</string>
    <string name="artists_activity_description">
        Here will be the list of artists from saved music by the user.
    </string>
    <string name="songs_activity_description">
        The list of songs from saved music. When the user clicks a song,
        the now playing activity starts starts.
    </string>
    <string name="upgrade_activity_description">
        In this activity users will be able to upgrade from the free version of the app
        to the subscription version of the app.
        The API used to handle payments will be the Google  Play Developer API,
        and specifically the Subscriptions and In-App Purchases service.
    </string>
    <string name="discover_activity_description">
        Here the user will find music tailored for them.
        Also, there will be a search option for songs.
    </string>
    <string name="now_playing_activity_description">
        This activity will display the song currently being played. This activity
        will be accessible from anywhere on the app. Also, it will contain the play,
        pause, forward and backward buttons.
    </string>
    <string name="playlists_activity">
        Here the user will find playlists created by her.
    </string>

</resources>
